adding status subsciber
